force-app/main/default/objects/Opportunity/fields/ABAC_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>ABAC_Approval_Date__c</fullName>
    <description>JG April 2020</description>
    <label>ABAC Approval Date</label>
    <type>Date</type>
</CustomField>