force-app/main/default/objects/Opportunity/fields/ABAC_Compliance__c.field-meta.xml
<CustomField>
    <fullName>ABAC_Compliance__c</fullName>
    <description>Status -critical for notifications, dashboards and reports</description>
    <label>ABAC Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>D Not Applicable</fullName>
                <isActive>false</isActive>
                <label>D Not Applicable</label>
            </value>
            <value>
                <fullName>D Not Started</fullName>
                <isActive>false</isActive>
                <label>D Not Started</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>