force-app/main/default/objects/Opportunity/fields/ABAC_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>ABAC_Expiration_Date__c</fullName>
    <label>ABAC Expiration Date</label>
    <type>Date</type>
</CustomField>