force-app/main/default/objects/Opportunity/fields/Active_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_End_Date__c</fullName>
    <inlineHelpText>As per the Contract</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>