force-app/main/default/objects/Opportunity/fields/Additional_Details__c.field-meta.xml
<CustomField>
    <fullName>Additional_Details__c</fullName>
    <description>Requested by AF 3.8</description>
    <label>Additional Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>