force-app/main/default/objects/Opportunity/fields/Aging__c.field-meta.xml
<CustomField>
    <fullName>Aging__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aging</label>
    <type>Checkbox</type>
</CustomField>