force-app/main/default/objects/Opportunity/fields/Agnostic__c.field-meta.xml
<CustomField>
    <fullName>Agnostic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agnostic Collaboration Description</description>
    <label>Agnostic Description</label>
    <type>Checkbox</type>
</CustomField>