force-app/main/default/objects/Opportunity/fields/Agnostic_TFA_Biology__c.field-meta.xml
<CustomField>
    <fullName>Agnostic_TFA_Biology__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agnostic checkbox in TFA/Biology Section</description>
    <label>Agnostic TFA/Biology</label>
    <type>Checkbox</type>
</CustomField>