force-app/main/default/objects/Opportunity/fields/Agreement_ICF_allow_WGS_other_omics__c.field-meta.xml
<CustomField>
    <fullName>Agreement_ICF_allow_WGS_other_omics__c</fullName>
    <label>Agreement &amp; ICF allow WGS &amp; other omics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Omics</fullName>
            </value>
            <value>
                <fullName>WGS Only</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>