force-app/main/default/objects/Opportunity/fields/Agreement_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Sub_Type__c</fullName>
    <label>Agreement Sub-Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MTA - Material Transfer Agreements</fullName>
            </value>
            <value>
                <fullName>DSA - Data Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>RSA - Results Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>CA - Collaboration Agreement</fullName>
            </value>
            <value>
                <fullName>SA - Sequencing Agreement</fullName>
            </value>
            <value>
                <fullName>FA - Funding Agreement</fullName>
            </value>
            <value>
                <fullName>MCRU - Master Clinical Research Unit Agreement</fullName>
            </value>
            <value>
                <fullName>RPI - Regeneron Pharmaceuticals, Inc</fullName>
            </value>
            <value>
                <fullName>Consort - Consortium Agreement</fullName>
            </value>
            <value>
                <fullName>DUA - Data Use Agreement / Data Access Agreement / Information Transfer Agreement / Data Sharing Agreement / Data Transfer Agreement</fullName>
                <isActive>false</isActive>
                <label>DUA - Data Use Agreement / Data Access Agreement / Information Transfer Agreement / Data Sharing Agreement / Data Transfer Agreement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>