force-app/main/default/objects/Opportunity/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>Type of Agreement</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RCA - Research Collaboration Agreement</fullName>
            </value>
            <value>
                <fullName>MTA - Material Transfer Agreements</fullName>
            </value>
            <value>
                <fullName>SA - Sequencing Agreement</fullName>
            </value>
            <value>
                <fullName>DSA - Data Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>RSA - Results Sharing Agreement</fullName>
            </value>
            <value>
                <fullName>CA - Collaboration Agreement</fullName>
            </value>
            <value>
                <fullName>FA - Funding Agreement</fullName>
            </value>
            <value>
                <fullName>MCRU - Master Clinical Research Unit Agreement</fullName>
            </value>
            <value>
                <fullName>RPI - Regeneron Pharmaceuticals, Inc</fullName>
            </value>
            <value>
                <fullName>Consort - Consortium Agreement</fullName>
            </value>
            <value>
                <fullName>External Dataset</fullName>
            </value>
            <value>
                <fullName>RCA - Other</fullName>
            </value>
            <value>
                <fullName>Other Agreement Type</fullName>
            </value>
            <value>
                <fullName>DUA</fullName>
                <isActive>false</isActive>
                <label>DUA - Data Use Agreement / Data Access Agreement / Information Transfer Agreement / Data Sharing Agreement / Data Transfer Agreement</label>
            </value>
            <value>
                <fullName>RCA - Custom Agreement (Term Sheet)</fullName>
                <isActive>false</isActive>
                <label>RCA - Custom Agreement (Term Sheet)</label>
            </value>
            <value>
                <fullName>RCA - Domestic Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - Domestic Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - Domestic No Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - Domestic No Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - EU Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - EU Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - EU No Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - EU No Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - Large Scale Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - Large Scale Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - Large Scale No Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - Large Scale No Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - ROW Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - ROW Budget Agreement</label>
            </value>
            <value>
                <fullName>RCA - ROW No Budget Agreement</fullName>
                <isActive>false</isActive>
                <label>RCA - ROW No Budget Agreement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>