force-app/main/default/objects/Opportunity/fields/All__c.field-meta.xml
<CustomField>
    <fullName>All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Agnostic check box in TAG Teams Section</description>
    <label>Agnostic TAG Team</label>
    <type>Checkbox</type>
</CustomField>