force-app/main/default/objects/Opportunity/fields/All_Collaboration_Agreement_Components_C__c.field-meta.xml
<CustomField>
    <fullName>All_Collaboration_Agreement_Components_C__c</fullName>
    <label>All Collaboration Agreement Components C</label>
    <type>Date</type>
</CustomField>