force-app/main/default/objects/Opportunity/fields/All_RCA_Components_Completed__c.field-meta.xml
<CustomField>
    <fullName>All_RCA_Components_Completed__c</fullName>
    <description>Added &quot;Date&quot; to field label JG April 2020</description>
    <inlineHelpText>Date all components of the RCA are complete, move to Collaboration Signoff</inlineHelpText>
    <label>All RCA Components Completed Date</label>
    <type>Date</type>
</CustomField>