force-app/main/default/objects/Opportunity/fields/AMD__c.field-meta.xml
<CustomField>
    <fullName>AMD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Age-Related Macular Degeneration</label>
    <type>Checkbox</type>
</CustomField>