force-app/main/default/objects/Opportunity/fields/AMR__c.field-meta.xml
<CustomField>
    <fullName>AMR__c</fullName>
    <label>Ancestry-AMR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>