force-app/main/default/objects/Opportunity/fields/Analysis_Limited_to_Described_Phenotype__c.field-meta.xml
<CustomField>
    <fullName>Analysis_Limited_to_Described_Phenotype__c</fullName>
    <label>Analysis Limited to Described Phenotype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes per Research Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>