force-app/main/default/objects/Opportunity/fields/Ancestry__c.field-meta.xml
<CustomField>
    <fullName>Ancestry__c</fullName>
    <label>Ancestry-AFR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>