force-app/main/default/objects/Opportunity/fields/Ancestry_EUR__c.field-meta.xml
<CustomField>
    <fullName>Ancestry_EUR__c</fullName>
    <label>Ancestry-EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>