force-app/main/default/objects/Opportunity/fields/Ancestry_NON_EUR__c.field-meta.xml
<CustomField>
    <fullName>Ancestry_NON_EUR__c</fullName>
    <formula>Ancestry__c  +  AMR__c  +  EAS__c  +  Ancestry_SAS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ancestry-NON-EUR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>