force-app/main/default/objects/Opportunity/fields/Ancestry_SAS__c.field-meta.xml
<CustomField>
    <fullName>Ancestry_SAS__c</fullName>
    <label>Ancestry-SAS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>