force-app/main/default/objects/Opportunity/fields/Ancestry_UNK__c.field-meta.xml
<CustomField>
    <fullName>Ancestry_UNK__c</fullName>
    <label>Ancestry-UNK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>