force-app/main/default/objects/Opportunity/fields/Any_carve_outs_that_heighten_RGC_s_risk__c.field-meta.xml
<CustomField>
    <fullName>Any_carve_outs_that_heighten_RGC_s_risk__c</fullName>
    <label>Any carve-outs that heighten RGC’s risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>