force-app/main/default/objects/Opportunity/fields/Are_material_rights_sublicensable__c.field-meta.xml
<CustomField>
    <fullName>Are_material_rights_sublicensable__c</fullName>
    <label>Are material rights sublicensable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>