force-app/main/default/objects/Opportunity/fields/Assay_Data_deletion_requirement__c.field-meta.xml
<CustomField>
    <fullName>Assay_Data_deletion_requirement__c</fullName>
    <label>Assay Data deletion requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>End Of Term</fullName>
            </value>
            <value>
                <fullName>Other Date</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>