force-app/main/default/objects/Opportunity/fields/Assay_Data_sharable_internationally__c.field-meta.xml
<CustomField>
    <fullName>Assay_Data_sharable_internationally__c</fullName>
    <label>Assay Data sharable internationally</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>