force-app/main/default/objects/Opportunity/fields/Autism__c.field-meta.xml
<CustomField>
    <fullName>Autism__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autism</label>
    <type>Checkbox</type>
</CustomField>