force-app/main/default/objects/Opportunity/fields/Biology_Other__c.field-meta.xml
<CustomField>
    <fullName>Biology_Other__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other TFA/Biology</label>
    <type>Checkbox</type>
</CustomField>