force-app/main/default/objects/Opportunity/fields/Biospecimen_Source__c.field-meta.xml
<CustomField>
    <fullName>Biospecimen_Source__c</fullName>
    <label>Biospecimen Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>