force-app/main/default/objects/Opportunity/fields/Biospecimen_Source_Other__c.field-meta.xml
<CustomField>
    <fullName>Biospecimen_Source_Other__c</fullName>
    <label>Biospecimen Source Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>