force-app/main/default/objects/Opportunity/fields/Biospecimen_SourcePL__c.field-meta.xml
<CustomField>
    <fullName>Biospecimen_SourcePL__c</fullName>
    <label>Biospecimen Source</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whole Blood</fullName>
            </value>
            <value>
                <fullName>Buccal</fullName>
            </value>
            <value>
                <fullName>Saliva</fullName>
            </value>
            <value>
                <fullName>Cells - PBMC</fullName>
            </value>
            <value>
                <fullName>Cells - Tissue</fullName>
            </value>
            <value>
                <fullName>Cells - Organoids</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>