force-app/main/default/objects/Opportunity/fields/Birdshot__c.field-meta.xml
<CustomField>
    <fullName>Birdshot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Birdshot</label>
    <type>Checkbox</type>
</CustomField>