force-app/main/default/objects/Opportunity/fields/Budget_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Budget_Agreement__c</fullName>
    <description>Status -critical for notifications, dashboards and reports

Formerly &quot;Budget Agreement&quot; changed by JG April 2020</description>
    <label>Budget Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Applicable</fullName>
                <default>true</default>
                <label>Not Applicable</label>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <label>Approved</label>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>D Not Applicable</fullName>
                <isActive>false</isActive>
                <label>D Not Applicable</label>
            </value>
            <value>
                <fullName>D Not Started</fullName>
                <isActive>false</isActive>
                <label>D Not Started</label>
            </value>
            <value>
                <fullName>Sr. Mgmnt. Approved</fullName>
                <isActive>false</isActive>
                <label>Sr. Mgmnt. Approved</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>