force-app/main/default/objects/Opportunity/fields/Budget_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approval_Date__c</fullName>
    <description>JG April 2020</description>
    <label>Budget Approval Date</label>
    <type>Date</type>
</CustomField>