force-app/main/default/objects/Opportunity/fields/Budget_Itemization_Information_Available__c.field-meta.xml
<CustomField>
    <fullName>Budget_Itemization_Information_Available__c</fullName>
    <description>Formerly Budget Itemization Information Available, changed by JG April 2020</description>
    <label>Budget Itemization Info Available Date</label>
    <type>Date</type>
</CustomField>