force-app/main/default/objects/Opportunity/fields/Budget_Leader__c.field-meta.xml
<CustomField>
    <fullName>Budget_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Leader</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1</booleanFilter>
        <filterItems>
            <field>User.Budget_Leader__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities8</relationshipName>
    <type>Lookup</type>
</CustomField>