force-app/main/default/objects/Opportunity/fields/Budget_only_when_applicable__c.field-meta.xml
<CustomField>
    <fullName>Budget_only_when_applicable__c</fullName>
    <label>Budget (only when applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Completed</fullName>
                <default>true</default>
                <label>Not Completed</label>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>