force-app/main/default/objects/Opportunity/fields/Budget_Type__c.field-meta.xml
<CustomField>
    <fullName>Budget_Type__c</fullName>
    <label>Budget Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Fee</fullName>
            </value>
            <value>
                <fullName>Milestone Based</fullName>
            </value>
            <value>
                <fullName>Prorated by Sample</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>