force-app/main/default/objects/Opportunity/fields/CAD__c.field-meta.xml
<CustomField>
    <fullName>CAD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coronary Artery Disease</label>
    <type>Checkbox</type>
</CustomField>