force-app/main/default/objects/Opportunity/fields/Can_Perform_Mega_Analyses__c.field-meta.xml
<CustomField>
    <fullName>Can_Perform_Mega_Analyses__c</fullName>
    <label>Can Perform Mega Analyses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes per Research Plan</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>