force-app/main/default/objects/Opportunity/fields/Can_RGC_sublicense_RGC_results__c.field-meta.xml
<CustomField>
    <fullName>Can_RGC_sublicense_RGC_results__c</fullName>
    <label>Can RGC sublicense RGC results</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>