force-app/main/default/objects/Opportunity/fields/Can_the_Phenotype_Data_be_analyzed_alone__c.field-meta.xml
<CustomField>
    <fullName>Can_the_Phenotype_Data_be_analyzed_alone__c</fullName>
    <label>Can the Phenotype Data be analyzed alone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>