force-app/main/default/objects/Opportunity/fields/Can_upload_to_Eve__c.field-meta.xml
<CustomField>
    <fullName>Can_upload_to_Eve__c</fullName>
    <description>Created by JG 042220</description>
    <label>Can upload to Eve</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>