force-app/main/default/objects/Opportunity/fields/Cardiovascular_Fibrosis__c.field-meta.xml
<CustomField>
    <fullName>Cardiovascular_Fibrosis__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cardiovascular/Fibrosis</label>
    <type>Checkbox</type>
</CustomField>