force-app/main/default/objects/Opportunity/fields/Cases_Archived__c.field-meta.xml
<CustomField>
    <fullName>Cases_Archived__c</fullName>
    <description>Number of samples matching desired phenotype already available at institution</description>
    <label>Cases (Archived) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>