force-app/main/default/objects/Opportunity/fields/Cases_Archived_All__c.field-meta.xml
<CustomField>
    <fullName>Cases_Archived_All__c</fullName>
    <description>Used to combine values the separate fields used in either single or multi institution collaborations to one field for reporting.</description>
    <formula>IF( Cases_Archived_RollUp__c != 0 || Cases_Archived_RollUp__c != null, Cases_Archived_RollUp__c,
Cases_Archived__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases (Archived)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>