force-app/main/default/objects/Opportunity/fields/Cases_Prospective__c.field-meta.xml
<CustomField>
    <fullName>Cases_Prospective__c</fullName>
    <description>Number of additional samples matching desired phenotype not yet available at institution, anticipated to be available for collaboration</description>
    <label>Cases (Prospective) (S)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>