force-app/main/default/objects/Opportunity/fields/Cases_Prospective_All__c.field-meta.xml
<CustomField>
    <fullName>Cases_Prospective_All__c</fullName>
    <formula>IF( Cases_Prospective_RollUp__c	 != 0 || Cases_Prospective_RollUp__c	 != null, Cases_Prospective_RollUp__c	,
Cases_Prospective__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cases (Prospective)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>